# rust-http-server

./: .gitignore  Cargo.toml  README.md  main.rs
.github/workflows/: test.yaml
codecrafters-http-server-target/: .rustc_info.json
codecrafters-http-server-target/release/: http-server-starter-rust  http-server-starter-rust.d
codecrafters-http-server-target/release/.fingerprint/anyhow-195c4f16a7be8831/: build-script-build-script-build  build-script-build-script-build.json
codecrafters-http-server-target/release/.fingerprint/anyhow-8c15f80c2843e190/: lib-anyhow  lib-anyhow.json
codecrafters-http-server-target/release/.fingerprint/anyhow-b2d8c0cf48702414/: run-build-script-build-script-build  run-build-script-build-script-build.json
codecrafters-http-server-target/release/.fingerprint/autocfg-e99d1d0186d0a800/: lib-autocfg  lib-autocfg.json
codecrafters-http-server-target/release/.fingerprint/bytes-226f611a0ea9cc43/: lib-bytes  lib-bytes.json
codecrafters-http-server-target/release/.fingerprint/cfg-if-ebd62bc4c95f9afe/: lib-cfg-if  lib-cfg-if.json
codecrafters-http-server-target/release/.fingerprint/either-77e9c1916011293b/: lib-either  lib-either.json
codecrafters-http-server-target/release/.fingerprint/http-server-starter-rust-12eddcccf4383d08/: dep-lib-http-server-starter-rust  lib-http-server-starter-rust  lib-http-server-starter-rust.json
codecrafters-http-server-target/release/.fingerprint/itertools-f1e559317507abd2/: lib-itertools  (+1 more)
src/: cli.rs  config.rs  connection.rs  file.rs  http.rs  main.rs  request.rs  response.rs  server.rs  shutdown.rs
(+85 files in other folders)
