[package]
name = "rust_http_server"
version = "0.1.0"
authors = ["Aaron Salm"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                  
bytes = "1.3.0"                                     
thiserror = "1.0.38"                                
tokio = { version = "1.23.0", features = ["full", "test-util"] } 
nom = "7.1.3"                                       
itertools = "0.12.0"                                

[dev-dependencies]
pretty_assertions = "1.3.0"                         

[profile.dev]
test-threads = 1
